---
source: spade-tests/src/ast_lowering.rs
---
pub mod submod {
    mod x {struct A {}}
}
mod submod2 {
    use lib::submod::x::A;
}


error: A is inaccessible
  ┌─ testinput:5:25
  │
2 │     mod x {struct A {}}
  │     -------------------
  │     │      │
  │     │      The inaccessible item is defined here
  │     The item is inaccessible because x is inaccessible
  ·
5 │     use lib::submod::x::A;
  │                      -  ^ A is inaccessible
  │                      │   
  │                      Because x is inaccessible
  │
  = Consider adding `pub`
  │
2 │     pub mod x {struct A {}}
  │     ++++
  = Or a more limited visibility like pub(lib) or pub(super)
  │
2 │     pub(lib) mod x {struct A {}}
  │     +++++++++
